force-app/main/default/objects/Candidate_Rasika__c/Candidate_Rasika__c.object-meta.xml
<CustomObject>
    <label>Candidate_Rasika</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate_Rasika Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates_Rasika</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>