force-app/main/default/objects/Candidate_Rasika__c/fields/addError__c.field-meta.xml
<CustomField>
    <fullName>addError__c</fullName>
    <label>addError</label>
    <length>20</length>
    <type>Text</type>
</CustomField>