force-app/main/default/objects/Candidate_Rasika__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
 MONTH( TODAY())   &gt;=  MONTH( DOB__c ) ,
 YEAR( TODAY()) -  YEAR( DOB__c )  ,
 YEAR( TODAY()) -  YEAR( DOB__c ) - 1 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>