force-app/main/default/objects/Candidate_Rasika__c/fields/Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary__c</fullName>
    <label>Expected Salary</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>