force-app/main/default/objects/Candidate_Rasika__c/fields/Job_Rasika__c.field-meta.xml
<CustomField>
    <fullName>Job_Rasika__c</fullName>
    <label>Job_Rasika</label>
    <referenceTo>Job_Rasika__c</referenceTo>
    <relationshipLabel>Candidates_Rasika</relationshipLabel>
    <relationshipName>Candidates_Rasika</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>