force-app/main/default/objects/Candidate_Rasika__c/fields/PAN_Card__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card__c</fullName>
    <label>PAN Card</label>
    <summaryForeignKey>PAN_Card__c.PAN_Card_Holder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>