force-app/main/default/objects/Candidate_Rasika__c/validationRules/Application_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISCHANGED( Application_Date__c ),
 $Setup.VRS__c.Application_Date_rule__c  
)</errorConditionFormula>
    <errorDisplayField>addError__c</errorDisplayField>
    <errorMessage>Validation error: Application Date cannot be changed</errorMessage>
</ValidationRule>