force-app/main/default/objects/Candidate_Rasika__c/validationRules/Expected_Salary_field_is_missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Salary_field_is_missing</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK( Expected_Salary__c )
,
$Setup.VRS__c.Expiry_date_rule__c
)</errorConditionFormula>
    <errorDisplayField>addError__c</errorDisplayField>
    <errorMessage>Validation error: Expected Salary field is missing</errorMessage>
</ValidationRule>