force-app/main/default/objects/Candidate_Rasika__c/validationRules/Expiry_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Application_Date__c  &gt;  Job_Rasika__r.Expires_On__c
 &amp;&amp; 
 $Setup.VRS__c.Salary_rule__c = true</errorConditionFormula>
    <errorDisplayField>Application_Date__c</errorDisplayField>
    <errorMessage>You cannot apply to this job after expiry date</errorMessage>
</ValidationRule>