force-app/main/default/objects/Candidate_Rasika__c/validationRules/Job_is_not_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_is_not_active</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT( Job_Rasika__r.Active__c   =  True),
 $Setup.VRS__c.JobIsNotActive__c 
)</errorConditionFormula>
    <errorDisplayField>addError__c</errorDisplayField>
    <errorMessage>ValidationError: This Job is not active. You can not apply for this job</errorMessage>
</ValidationRule>