force-app/main/default/objects/Candidate_Rasika__c/validationRules/PAN_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Card</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IF( PAN_Card__c  &gt; 1, true, false),
 NOT( $Permission.Can_have_only_one_PAN_card ) )</errorConditionFormula>
    <errorMessage>Cannot add multiple PAN Card details</errorMessage>
</ValidationRule>