force-app/main/default/objects/Candidate_Rasika__c/validationRules/Salutation_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Salutation_required</fullName>
    <active>true</active>
    <description>If Email__c != null, Expected_Salary__c  is required</description>
    <errorConditionFormula>AND( Email__c  &lt;&gt; null, Expected_Salary__c  = null)</errorConditionFormula>
    <errorMessage>If Email__c != null, Expected_Salary__c  is required</errorMessage>
</ValidationRule>